开题报告完成

--- a/body/undergraduate/proposal/proposal/background.tex
+++ b/body/undergraduate/proposal/proposal/background.tex
@@ -18,7 +18,7 @@ Zhdanov等研究一种不需要Gramian约束的地球物理数据联合反演，
 
 开发一种可以有效利用多模态岩石物理信息的联合反演策略具有重要意义，它可以有效地解决岩石物理信息的非唯一性问题。以图 1 中的岩石物理数据为例（即 Moorkamp 等人，2013 年的图 4）。 黑点显示了穿透海洋盐丘的钻孔的电阻率和地震速度测量值。 尽管由于测量噪声和钻孔附近的局部不均匀性造成了分散，图 1 中测得的电阻率和速度值（即黑点）的交会图显示了两个主要的聚类特征，一个被蓝色圆圈包围并对应于 盐和另一个表现出准二次趋势并代表背景沉积物。 图 1 中物性分布的双峰性质反映了该地区的真实地质情况。 但与此同时，也使得在联合反演中使用这些有价值的信息变得困难，因为当存在多个岩石物理关系时，几乎不可能事先正确指定这些岩石物理关系的空间适用性。 如果我们不能对适当的区域应用适当的岩石物理约束，如图 1 所示的先验岩石物理信息，尽管其本身非常有价值，但要么无效，要么甚至对反演产生负面影响。
 
-\begin{figure}
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.9\textwidth]{ktbg/1.png}
     \caption[]{黑点显示从钻入海洋盐丘的钻孔测得的电阻率和地震速度值（Moorkamp 等人，2013 年）。 绿点是从大地电磁和地震数据的单独反演中恢复的物理属性值。 蓝点标记了使用交叉梯度法从联合反演中恢复的电阻率和速度值（Moorkamp 等，2013）} \label{ktbg1}
