--- a/body/undergraduate/proposal/proposal/content.tex
+++ b/body/undergraduate/proposal/proposal/content.tex
@@ -2,6 +2,27 @@
 
 \subsection{主要研究内容}
 
+在本研究主要部分是实现浅地表电阻率和地震联合反演的算法，并且首先在多种模型中测试单独反演、直接联合反演和加权联合反演的有效性，最后，本研究将相应算法应用到浙江良渚古城墙周围探测的野外实例中。
+
 \subsection{技术路线}
 
+本研究目前准备采取的技术路线如下：
+
+1. 分析在良渚城墙附近测定的物性数据，确定合适的反演方法。
+
+2. 进行无地震约束反演，仅针对电阻率数据对测点进行反演，与实测电阻率数据进行正演拟合。
+
+3. 为了更精细地描述目标地层地细节，在无约束的电阻率反演结果上进行电法-地震方法联合建模约束反演。
+\begin{itemize}
+    \item 整理数据，得到聚类方法的相关参数，如聚类中心的数量和聚类中心值。
+    \item 构建先验电阻率模型，它既要拥有相应的地震构造形态，也需要保持合理的电阻率分布。
+    \item 基于岩石物理关系的多重约束反演。
+\end{itemize}
+
 \subsection{可行性分析}
+
+本实验采用的主要方法是模糊C均值联合聚类反演方法。该反演方法已经有较成熟的研究。以下是对该方法相关的演变历史。
+
+为了提高反演的稳定性，减少多解性，Vozoff 和 Jupp（1975）首次提出联合 反演的概念，通过联合反演来获得不同地球物理数据对地下同一地质特征的不同反 映，在反演中达到互补的效果，得到更加真实可靠的地质模型[]。后来研究者们在 联合反演上取得了相当的进展，从同一物性联合到不同物性的联合，从 2 维联合到 3 维联合。基于结构相似性约束，即不同的物性参数具有同一地质结构，Gallardo 和 Meju（2003、2004）提出了交叉梯度联合反演方法，实用性强、稳定性好， 后来的研究者们也证明交叉梯度联合反演方法相比于传统约束方法更优越。Zhdanov 等（2015）在电磁和位场联合反演中，提出了基于 Gramian 约束的联合反演方法。 近年来，模糊 C-均值聚类联合反演方法（FCM）(Sun and Li （2015，2016）) 也取得了不错的效果，针对现实中经常会遇到的其他物性关系，Sun 和 Li（2016）又拓展了 FCM 方法。
+
+Lelièvre 等人 (2012)采用模糊 c 均值 (FCM) 聚类将两种岩石物理关系(一种用于沉积物, 另一种用于硫化物矿床) 纳入重力和地震走时数据的联合反演中。Sun 和 Li (2011, 2015a)将 FCM 聚类算法与经典的 Tikhonov 正则化反演方法相结合, 开发了一种多域聚类反演方法,可以将统计岩石物理数据纳入单一类型的地球物理数据反演。
