--- a/zjuthesis.tex
+++ b/zjuthesis.tex
@@ -42,8 +42,8 @@
 ]{zjuthesis}
 
 %% Uncomment the following lines if you need multi line titles on cover pages
-\titletwolines{浅地表地质目标地球物理探测数据的}{聚类联合反演成像}
-% \titleengtwolines{English Title Line One}{Englisht Title Line Two}
+\titletwolines{浅地表地质目标地球物理探测}{数据的聚类联合反演成像}
+% \titleengtwolines{English Title Line One}{English Title Line Two}
 
 %% Uncomment the following lines if you need multi line department names on cover pages
 % \departmenttwolines{学院名第一行}{学院名第二行}
