--- a/body/undergraduate/proposal/proposal/plan.tex
+++ b/body/undergraduate/proposal/proposal/plan.tex
@@ -2,4 +2,22 @@
 
 \subsection{进度安排}
 
+1. 2022.10.20-2022.11.30,文献调研，物性数据分析，完成物性数据初步分析。
+
+2. 2022.12.1-2022.12.31，完成文献调研和撰写文献综述。完成地震与电法数据初步处理。完成外文翻译。完成开题报告撰写，包括研究目的与意义，国内外研究现状，论文研究内容，拟采用的技术路线及可行性分析，创新性分析，以及预期研究成果等。
+
+3. 2023.1.1-2023.1.31，完成开题答辩。完成物性数据分析。完成地震与电法理论数据联合反演处理。
+
+4. 2023.2.1-2023.2.28，完成地震与电法实际数据联合反演处理。准备提交开题报告、文献综述、外文翻译稿及原稿。
+
+5. 2023.3.1-2023.3.31，完成论文初稿撰写。
+
+6. 2023.4.1-2023.4.30，完成送审论文撰写。
+
+7. 2023.5.1-2023.5.31，提交送审毕业论文。根据评审意见完成修改。完成毕业论文答辩。
+
+8. 2023.6.1-2023.6.10，提交最终版毕业论文。
+
 \subsection{预期目标}
+
+在本研究中，我们希望实现浅地表电阻率和地震联合反演的算法，并且首先在广泛应用的嵌套模型和差异模型上测试单独反演、直接联合反演和加权联合反演的有效性，最后，将相应算法应用到浙江良渚古城墙周围探测的野外实例中。
