--- a/script/ci/template/content.tex
+++ b/script/ci/template/content.tex
@@ -1,21 +1,9 @@
-\cleardoublepage
+\chapter{一个 Chapter}
 
-\section{Overleaf 使用注意事项}
+\zhlipsum[1][name=zhufu]
 
-如果你在Overleaf上编译本模板，请注意如下事项~\cite{zjuthesis}：
+\section{一个 Section}
 
-\begin{itemize}
-    \item 删除根目录的 ``.latexmkrc'' 文件，否则编译失败且不报任何错误
-    \item 字体有版权所以本模板不能附带字体，请务必手动上传字体文件，并在各个专业模板下手动指定字体。
-        具体方法参照 GitHub 主页的说明。
-    \item 当前（2019年9月2日）的Overleaf使用TexLive 2017进行编译，但一些伪粗体复制乱码的问题需要TexLive 2019版本来解决。
-        所以各位同学可以在Overleaf上编写论文，但务必使用本地的TexLive 2019来进行最终编译，以免产生查重相关问题。
-        具体说明参照 GitHub 主页。
-\end{itemize}
-
-\subsection{节标题}
-
-\subsubsection{小节标题}
 
 \par 我们可以用includegraphics来插入现有的jpg等格式的图片，如\autoref{fig:zju-logo}。
 
@@ -46,7 +34,7 @@
 \end{equation}
 
 \par 如\autoref{code:sample}所示，这是一段代码。
-计算机学院的代码样式可能与其他专业不同，
+计算机学院~\cite{zjuthesis}的代码样式可能与其他专业不同，
 如有需要，可以从计算机学院专业模板中复制相关的代码样式设定。
 
 \begin{lstlisting}[%
@@ -82,4 +70,24 @@ int main(int argc, char *argv[])
     \end{tabular}
 \end{table}
 
-\sectionnonum[none]{同一页上的章标题}
+\section{另一个 Section}
+
+\zhlipsum[2-3][name=zhufu]
+
+\subsection{一个 Subsection}
+
+\zhlipsum[4-5][name=zhufu]
+
+\subsubsection{一个 Subsubsection}
+
+\zhlipsum[6-7][name=zhufu]
+
+\section{又一个 Section}
+
+\lipsum
+
+\chapter{另一个 Chapter}
+
+\section{又一个 Section}
+
+\zhlipsum[8][name=zhufu]
