--- a/body/undergraduate/proposal/review/review.tex
+++ b/body/undergraduate/proposal/review/review.tex
@@ -3,35 +3,21 @@
 \chapter{文献综述}
 
 \section{背景介绍}
-\par 正文格式与具体要求\cite{zjuthesisrules}
 
-\subsection{小节}
 
-\subsubsection{小节}
+浅地表地质目标的地球物理探测大多集中在几十厘米到几十米的范围，往往出于对工程设计的目的，对分辨率和定性定量解释有着更高的要求。但是由于探测对象本身拥有复杂的结构，以及地球物理场拥有的等效性，即不同的物理特征分布会得到相同的观测结果，以及观测系统在空间上覆盖的有限性和观测系统中包含的误差或是其他场源的影响，地球物理反演问题有着严重的非唯一性。电阻率法与地震走时成像作为浅地表勘探的两种重要方法，分别用于解决地下介质的电性差异与速度差异的问题。但是处于对探勘精度和问题的复杂性的考虑，单一的地球物理方法已经渐渐地无法满足目前的探测要求。例如电阻率法勘探，在浅地表中引起电性差异的原因主要是地层富水性的强弱，因电阻率勘探具有体积效应，在确定地层具有含水体的基础上无法确定含水量的大小。而含水量的确定是施工与设计最为关注的问题。另一方面，在对溶洞、空腔、煤层风氧化带的勘探时，此类带有容水空间的地质异常，在电阻率勘探中难以区分，因为空腔或裂隙中从充满空气到部分充水到完全充水，其在电阻率表现为从高电阻率到地层电阻率背景值再到低电阻率形态变化。
+
+在地震走时勘探中， 速度不均匀体在射线路径上分布，在同时改变不均匀体的大小和速度值的情况下可以使接收点上获得相同的走时分布，在高速或低速异常周围容易形成拖尾异常。 针对地球物理方法多解性以及单一方法无法解决浅地表工程地质问题的情况，多种岩石属性数据联合反演解释成为一种有效途径。
+
+
 
 \section{国内外研究现状}
 
 \subsection{研究方向及进展}
 
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=.2\linewidth]{logo/zju}
-    \caption{\label{fig:zju-logo}浙江大学LOGO}
-\end{figure}
 
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=.2\linewidth]{logo/zju}
-    \caption{\label{fig:zju-logo1}浙江大学LOGO}
-\end{figure}
 
 \subsection{存在问题}
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=.2\linewidth]{logo/zju}
-    \caption{\label{fig:zju-logo2}浙江大学LOGO}
-\end{figure}
 
 \section{研究展望}
 
