--- a/body/undergraduate/proposal/review/review.tex
+++ b/body/undergraduate/proposal/review/review.tex
@@ -4,24 +4,33 @@
 
 \section{背景介绍}
 
-
-浅地表地质目标的地球物理探测大多集中在几十厘米到几十米的范围，往往出于对工程设计的目的，对分辨率和定性定量解释有着更高的要求。但是由于探测对象本身拥有复杂的结构，以及地球物理场拥有的等效性，即不同的物理特征分布会得到相同的观测结果，以及观测系统在空间上覆盖的有限性和观测系统中包含的误差或是其他场源的影响，地球物理反演问题有着严重的非唯一性。电阻率法与地震走时成像作为浅地表勘探的两种重要方法，分别用于解决地下介质的电性差异与速度差异的问题。但是处于对探勘精度和问题的复杂性的考虑，单一的地球物理方法已经渐渐地无法满足目前的探测要求。例如电阻率法勘探，在浅地表中引起电性差异的原因主要是地层富水性的强弱，因电阻率勘探具有体积效应，在确定地层具有含水体的基础上无法确定含水量的大小。而含水量的确定是施工与设计最为关注的问题。另一方面，在对溶洞、空腔、煤层风氧化带的勘探时，此类带有容水空间的地质异常，在电阻率勘探中难以区分，因为空腔或裂隙中从充满空气到部分充水到完全充水，其在电阻率表现为从高电阻率到地层电阻率背景值再到低电阻率形态变化。
-
-在地震走时勘探中， 速度不均匀体在射线路径上分布，在同时改变不均匀体的大小和速度值的情况下可以使接收点上获得相同的走时分布，在高速或低速异常周围容易形成拖尾异常。 针对地球物理方法多解性以及单一方法无法解决浅地表工程地质问题的情况，多种岩石属性数据联合反演解释成为一种有效途径。
-
-
-
+地球物理反演是我们观测地下介质体结构的重要方法，而对于浅地表的地球物理反演来说，我们观测的范围在几十厘米到几十米的范围。尽管我们可以使用钻孔得到来自探测范围内的某些样本，但是我们对于地下结构的认识大部分仍旧来自通过假设模型进行数值模拟得到的输出，并且与地球物理观测进行比较得到的结果，在这些情况下，地球物理的模型大多是通过正演建模反复实验生成的。通过正演生成的模型很大程度上与先验信息有关系，这种模型需要反映地质结构，是大量实验得出的结果（Leibeckeretal.，2002；Gatzemeier 和 Moorkamp，2005;Heise 等，2008）。不过随着近年来的算力的普遍提高，大量的地球物理模型已经由反演程序构建。这些可接受的模型，通常是它们所预测的数据符合最小二乘意义上的观测结果（Wheelock 等，2015）。通常求解这种问题存在大量不同的算法Nocedal（2006）、 Snieder和Trampert（1999）、Tarantola（2004）、Menke（2012）、Mosegaard和Hansen（2016））。而在勘探地球物理中，出于对工程设计的目的，对分辨率和定性定量解释有着更高的要求；更为重要的是，地球物理数据的反演问题往往具有多解性和非唯一性，前者指的是无限数量的模型可以解释数据相同程度的不确定性（例如，Munooz 和 Rath，2006）， 后者指的是相似的数据可能导致截然不同的模型（例如，Backus 和 Gilbert，1967）。同时，不同的探测手段也会有各自的问题，例如电阻率法勘探，因电阻率勘探具有体积效应，在确定地层具有含水体的基础上无法确定含水量的大小（Gao, 2015）。因此多种岩石属性数据联合反演解释作为一种有效途径，可以改善地球物理方法多解性以及单一方法无法解决浅地表工程地质问题的情况。
+\newpage
 \section{国内外研究现状}
 
 \subsection{研究方向及进展}
 
+前人对基于岩石物理关系的联合反演也做了较多的研究，例如Colombo等建立了密度、电阻率与速度的经验关系，并通过重、电、震数据联合反演圈定了隐伏盐丘；De Stefano等利用Gardner公式建立了地层密度与地震纵波速度的关系式，开展重力与地震旅行时数据联合反演，并通过理论模 型 测 试 表 明 联 合 反 演 能 提 高 成 像精度。
 
+Yang等提出了一种基于聚类和多元地质统计学的电-震联合建模约束反演方法。Zhdanov等研究一种不需要Gramian约束的地球物理数据联合反演，此种方法不需要定义模型之间的关系函数。而近年来聚类的思想被引入联合反演中，研究者发现此类方法可以解决传统的统计方法难以将多组岩石物理关系应用于特定区域的难题。除了利用直流电法-地震数据进行联合反演外，Cater-Mcauslan等大量研究者也提出了基于重力-地震数据的联合反演。胡祖志等利用已知的测井、地震剖面等先验信息进行约束建模，并基于井—震约束的MT和重力数据实现了人工鱼群联合反演。相鹏等提出一种变密度—速度关系的重力与地震同步联合反演方法。陈晓等提出基于宽范围岩石物性约束的大地电磁与地震联合反演，该类方法可降低由于先验岩石物理关系不够精确带来的影响。
+
+对于联合反演算法，近年来研究者也提出多种对提高反演算法计算效率和反演算法精确度的方法。对于反演算法的效率，共轭梯度法是目前被广泛接受的算法，它是由Hestenes与Stiefel首次提出的共轭梯度法，该方法可以用于计算重力梯度数据（Vasco, 1991），亦有研究者使用该方法对重力梯度数据进行反演计算（Chen, 2013）。另一方面，提到反演算法的精确度主要在于降低反演的多解性，此问题的主要解决方法是在计算过程中引入不同的模型约束，如最小体积原理约束（Last和Kubic, 1983）、带先验信息的约束（Barbosa和Silva, 1994）。也有研究者在原来的算法上进行改进，如引入基于灵敏度矩阵的深度加权函数（Li, 2000）、最光滑方法（Li 和 Oldenburg, 1998）、聚焦反演算法（Portniaguine和Zhdanov, 1999）。以上两类方法都是在单变量反演的情况下做到的，对于联合反演，它经历了从同一物性联合反演到多个物性联合反演，从二维联合反演到三维联合反演。基于相似性约束的交叉梯度反演（Gallardo和Meju, 2003）和基于Gramian约束的联合反演方法（Zhdanov, 2015）都有较好的效果，比传统的单变量反演方法稳定性好。近年来，模糊C-均值（FCM）联合反演方法（Sun和Li, 2015）也取得很好的效果，这种方法适用于物性关系不明确的地质关系中。针对其他常见的物性关系，Sun等扩展了FCM方法。
 
 \subsection{存在问题}
 
+尽管合理地使用联合反演可以显著地改进反演的结果，并且可以得到一组更好的地下结构，但是如果在过于复杂的环境中使用反演算法会遇到更加复杂的参数问题。对于这种问题我们需要对参数进行多次调整，需要对模型进行人为的评估，通常情况下，我们需要权衡不同参数的选择和模型反演的结果。举例来说，在模型依赖于一个或者是多个参数的选择时，我们需要对地质模型有深刻的理解，之后才能得到一个可靠的推论模型。
+
+联合反演方法自身也有理论上的缺陷，在不跨越物理属性时的多种物理量联合反演时，如在直流电法与其他数据的联合反演中，会受到优势数据集（如直流电法数据）的影响；而当涉及到不同的地球物理属性时，联合反演可能会碰到欠拟合或是过拟合的问题，亦会碰到非收敛或分辨率不兼容的问题。
+
 \section{研究展望}
 
-\newpage
+联合反演中仍然存在一些需要进一步解决的问题，例如： 
+
+1. 有些联合反演的效果相对于直接反演效果并没有直接上的可区分性，如Athanasiou等（2007）提出对基于Jacobi矩阵的加权联合反演与直接联合反演在约束效力上并没有非常明显的差别，因此需要进一步提出改进的算法。
+
+2. 在基于温纳和温纳-斯伦贝谢的联合电法反演中，以往的研究呈现出了不错的结果。但是对于其他的电极排列，由于不同电极排列的特征差异，我们需要依赖“基准”阵列进行电法数据的矫正。
+
+% \newpage
 \begingroup
     \linespreadsingle{}
     \printbibliography[title={参考文献}]
