--- a/body/undergraduate/proposal/proposal/background.tex
+++ b/body/undergraduate/proposal/proposal/background.tex
@@ -10,7 +10,7 @@
 
 前人对基于岩石物理关系的联合反演也做了较多的研究，例如Colombo等建立了密度、电阻率与速度的经验关系，并通过重、电、震数据联合反演圈定了隐伏盐丘；De Stefano等利用Gardner公式建立了地层密度与地震纵波速度的关系式，开展重力与地震旅行时数据联合反演，并通过理论模 型 测 试 表 明 联 合 反 演 能 提 高 成 像精度。
 
-Zhdanov等研究一种不需要Gramian约束的地球物理数据联合反演，此种方法不需要定义模型之间的关系函数。而近年来聚类的思想被引入联合反演中，研究者发现此类方法可以解决传统的统计方法难以将多组岩石物理关系应用于特定区域的难题。除了利用直流电法-地震数据进行联合反演外，Cater-Mcauslan等大量研究者也提出了基于重力-地震数据的联合反演。陈晓等提出基于宽范围岩石物性约束的大地电磁与地震联合反演，该类方法可降低由于先验岩石物理关系不够精确带来的影响。胡祖志等利用已知的测井、地震剖面等先验信息进行约束建模，并基于井—震约束的ＭＴ和重力数据实现了人工鱼群联合反演。相鹏等提出一种变密度—速度关系的重力与地震同步联合反演方法。杨博等提出了一 种基于聚类和多元地质统计学的电-震联合建模约束反演方法。
+Zhdanov等研究一种不需要Gramian约束的地球物理数据联合反演，此种方法不需要定义模型之间的关系函数。而近年来聚类的思想被引入联合反演中，研究者发现此类方法可以解决传统的统计方法难以将多组岩石物理关系应用于特定区域的难题。除了利用直流电法-地震数据进行联合反演外，Cater-Mcauslan等大量研究者也提出了基于重力-地震数据的联合反演。陈晓等提出基于宽范围岩石物性约束的大地电磁与地震联合反演，该类方法可降低由于先验岩石物理关系不够精确带来的影响。胡祖志等利用已知的测井、地震剖面等先验信息进行约束建模，并基于井—震约束的MT和重力数据实现了人工鱼群联合反演。相鹏等提出一种变密度—速度关系的重力与地震同步联合反演方法。杨博等提出了一 种基于聚类和多元地质统计学的电-震联合建模约束反演方法。
 
 \subsection{本研究的意义和目的}
 
