--- a/body/undergraduate/proposal/translation/translation.tex
+++ b/body/undergraduate/proposal/translation/translation.tex
@@ -10,7 +10,7 @@
 
 地球物理观测反演是研究地球地下和了解我们赖以生存的星球的结构和组成的主要工具之一。钻孔通常使我们能够接触到5公里深处的材料，在特殊情况下可达10公里（Huenges等，1997），但只能在特定位置取样。在某些地方，例如金伯利岩管，地质过程将物质从深处输送到地表，并为我们提供来自下地壳和地幔的样本（例如，Griffin等，2009）。然而，我们的大部分知识来自将假设模型计算出的数值模拟的输出与地球表面或附近的地球物理观测结果进行比较。在某些情况下，这些模型是通过正演建模通过反复试验生成的（Leibeckeretal.，2002；Gatzemeier和 Moorkamp，2005;Heise等，2008）。如果这个过程执行得好，我们可以测试关于所调查区域物理结构的不同假设，并深入了解数据对不同结构的敏感性。然而，正演建模通常需要大量试验，因此是一项乏味的任务。此外，模型通常是对地质结构的强烈概括，先入为主的想法可能会影响在此过程中考虑的模型类型。
 
-由于这些原因以及过去几年计算能力的显着提高，如今大多数地球物理模型都是通过正式的反演程序构建的。在这里，我们在数学上定义可接受模型的标准，通常是最终模型预测的数据符合最小二乘意义上的观察结果（例如，Wheelock等，2015），并使用自动算法找到一个或一组满足这些标准的模型。鉴于反演不仅在地球物理学中的重要性，存在大量不同的算法来完成这项任务（Nocedal（2006）、 Snieder和Trampert（1999）、Tarantola（2004）、Menke（2012）、Mosegaard和Hansen（2016））以及大地电磁法（MT）和受控源的特殊情况对地球物理背景下的反演方法进行了很好的介绍Avdeev（2005）,Abubakar等的电磁学（CSEM，2009）、Siripunvaraporn（2012）以及Rodi和Mackie（2012）。
+由于这些原因以及过去几年计算能力的显着提高，如今大多数地球物理模型都是通过正式的反演程序构建的。在这里，我们在数学上定义可接受模型的标准，通常是最终模型预测的数据符合最小二乘意义上的观察结果（例如，Wheelock等，2015），并使用自动算法找到一个或一组满足这些标准的模型。鉴于反演不仅在地球物理学中的重要性，存在大量不同的算法来完成这项任务（Nocedal（2006）、 Snieder和Trampert（1999）、Tarantola（2004）、Menke（2012）、Mosegaard和Hansen（2016）以及大地电磁法（MT）和受控源的特殊情况对地球物理背景下的反演方法进行了很好的介绍Avdeev（2005）,Abubakar等的电磁学（CSEM，2009）、Siripunvaraporn（2012）以及Rodi和Mackie（2012）。
 
 尽管有高度精确的算法和深入的研究，地球物理数据的反演实际上总是病态的，即相似的数据可能导致截然不同的模型（例如，Backus和Gilbert，1967）和非唯一的，即无限数量的模型可以解释数据相同程度的不确定性（例如，Munooz和Rath，2006）。这是因为我们只能在地表或地表附近进行测量，并且与地质变化的尺度长度相比，站点之间的距离很大。此外，我们的测量是带限的并且受到噪声的污染（Parker1980，1983）。这导致在解释数据时需要考虑的逆向模型中的歧义。然而，这些歧义的本质是特定于方法的。例如，大地电磁法可以很好地解析电阻层的厚度，但不能解析电阻率，而直流电阻率对其电阻很敏感，即电阻率-厚度乘积（Vozoff和Jupp，1975）。如果我们能够利用这些互补的敏感性，与仅使用单一方法相比，我们有望更好地恢复地球内部结构的形状和特性。
 
