--- a/page/undergraduate/final/job.tex
+++ b/page/undergraduate/final/job.tex
@@ -3,10 +3,25 @@
 
 {
     \bfseries
-    \noindent 一、题目：\\
+    \noindent 一、题目：浅地表地质目标地球物理探测数据的聚类联合反演成像\\
     \noindent 二、指导教师对毕业论文（设计）的进度安排及任务要求：\\
 
-    \vskip 50mm
+    2022.10.20-2022.11.30,文献调研，物性数据分析，完成物性数据初步分析。
+
+2022.12.1-2022.12.31，完成文献调研和撰写文献综述。完成地震与电法数据初步处理。完成外文翻译。完成开题报告撰写，包括研究目的与意义，国内外研究现状，论文研究内容，拟采用的技术路线及可行性分析，创新性分析，以及预期研究成果等。
+
+2023.1.1-2023.1.31，完成开题答辩。完成物性数据分析。完成地震与电法理论数据联合反演处理。
+
+2023.2.1-2023.2.28，完成地震与电法实际数据联合反演处理。准备提交开题报告、文献综述、外文翻译稿及原稿。
+
+2023.3.1-2023.3.31，完成论文初稿撰写。
+
+2023.4.1-2023.4.30，完成送审论文撰写。
+
+2023.5.1-2023.5.31，提交送审毕业论文。根据评审意见完成修改。完成毕业论文答辩。
+
+2023.6.1-2023.6.10，提交最终版毕业论文。
+    \vskip 20mm
 
     \noindent 起讫日期 20 \quad 年 \quad  月 \quad  日 \quad 至 \quad 20 \quad  年 \quad  月  \quad 日
     \begin{flushright}
