--- a/body/undergraduate/final/4-cv.tex
+++ b/body/undergraduate/final/4-cv.tex
@@ -1,2 +1,8 @@
 \cleardoublepage
 \sectionnonum{作者简历}
+
+\begin{figure}
+    \includepdf[
+        scale=0.8,
+            ]{./figure/resume.pdf}
+\end{figure}
