--- a/body/ref.bib
+++ b/body/ref.bib
@@ -23,3 +23,13 @@
     year = {2008},
     url = {http://grs.zju.edu.cn/redir.php?catalog_id=10038&object_id=12877},
 }
+
+@article{杨博2021基于聚类和多元地质统计学的电,
+  title={基于聚类和多元地质统计学的电—震联合建模约束反演技术及应用},
+  author={杨博 and 张祥国 and 刘展 and 徐凯军},
+  journal={石油地球物理勘探},
+  volume={56},
+  number={3},
+  pages={670--677},
+  year={2021}
+}
