--- a/config/packages.tex
+++ b/config/packages.tex
@@ -28,7 +28,5 @@
 \usepackage{xparse}
 \usepackage{bookmark}
 \usepackage{calc}
-\usepackage{longtable}
-\usepackage{booktabs}
-\usepackage[chapter]{algorithm}
-\usepackage{algorithmic}
+\usepackage{lipsum}
+\usepackage{zhlipsum}
