--- a/body/graduate/content.tex
+++ b/body/graduate/content.tex
@@ -1,53 +1,23 @@
-\chapter{关于本模板}
+\chapter{一个 Chapter}
 
-本模板根据浙江大学研究生院编写的《浙江大学研究生学位论文编写规则》~\cite{zjugradthesisrules}，
-在原有的 zjuthesis 模板~\cite{zjuthesis}基础上开发而来。
+\zhlipsum[1][name=zhufu]
 
-本模板的本科生版本\cite{zjuthesisrules}得到了浙江大学本科生院老师的支持与审核，
-已经在本科生院网上公示。
-但当前的研究生版本并未经过研究生院老师的审核，
-同学们使用时要注意对照模板与要求，
-切不可盲目使用。
-
-作者本人并未编写过浙江大学研究生毕业论文，
-所以不清楚具体要求。
-如果有热心同学愿意帮忙，
-可以替我联系相关老师，我会配合审核并修改代码。
-
-\section{Overleaf 使用注意事项}
-
-如果你在Overleaf上编译本模板，请注意如下事项：
-
-\begin{itemize}
-    \item 删除根目录的 ``.latexmkrc'' 文件，否则编译失败且不报任何错误
-    \item 字体有版权所以本模板不能附带字体，请务必手动上传字体文件，并在各个专业模板下手动指定字体。
-        具体方法参照 GitHub 主页的说明。
-    \item 当前的Overleaf默认使用TexLive 2017进行编译，但一些伪粗体复制乱码的问题需要TexLive 2019版本来解决。
-        所以各位同学可以在Overleaf上编写论文时务必切换到TexLive 2019或更新版本来编译，以免产生查重相关问题。
-        具体说明参照 GitHub 主页。
-\end{itemize}
+\section{一个 Section}
 
 
-\section{节标题}
+\par 我们可以用includegraphics来插入现有的jpg等格式的图片，如\autoref{fig:zju-logo}。
 
-我们可以用includegraphics来插入现有的jpg等格式的图片，
-如\autoref{fig:zju-logo}所示。
-
-\begin{figure}[htbp]
+\begin{figure}[ht]
     \centering
-    \includegraphics[width=.3\linewidth]{logo/zju}
+    \includegraphics[width=.4\linewidth]{logo/zju}
     \caption{\label{fig:zju-logo}浙江大学LOGO}
 \end{figure}
 
-
-\subsection{小节标题}
-
-
 \par 如\autoref{tab:sample}所示，这是一张自动调节列宽的表格。
 
-\begin{table}[htbp]
+\begin{table}[ht]
     \caption{\label{tab:sample}自动调节列宽的表格}
-    \begin{tabularx}{\linewidth}{c|X<{\centering}}
+    \begin{tabularx}{\linewidth}{|c|X<{\centering}|}
         \hline
         第一列 & 第二列 \\ \hline
         xxx & xxx \\ \hline
@@ -56,7 +26,6 @@
     \end{tabularx}
 \end{table}
 
-
 \par 如\autoref{equ:sample}，这是一个公式
 
 \begin{equation}
@@ -64,40 +33,61 @@
     A=\overbrace{(a+b+c)+\underbrace{i(d+e+f)}_{\text{虚数}}}^{\text{复数}}
 \end{equation}
 
-\chapter{另一章}
+\par 如\autoref{code:sample}所示，这是一段代码。
+计算机学院~\cite{zjuthesis}的代码样式可能与其他专业不同，
+如有需要，可以从计算机学院专业模板中复制相关的代码样式设定。
 
+\begin{lstlisting}[%
+    language={C},
+    caption={simple.c},
+    label={code:sample}
+]
+#include <stdio.h>
 
-\begin{figure}[htbp]
+int main(int argc, char *argv[])
+{
+    printf("Hello, zjuthesis\n");
+    return 0;
+}
+\end{lstlisting}
+
+\subsection{关于字体}
+
+英文字体通常提供了粗体和斜体的组合，中文字体通常没有粗体或斜体，本模板使用了 `AutoFakeBold' 来实现中文伪粗体，但不提供中文斜体，如\autoref{tab:font-examples}所示。
+
+\begin{table}
     \centering
-    \includegraphics[width=.3\linewidth]{example-image-a}
-    \caption{\label{fig:fig-placeholder}图片占位符}
-\end{figure}
+    \caption{一些字体示例}
+    \label{tab:font-examples}
+    \begin{tabular}{|c|c|c|c|c|}
+        \hline
+        字体            & 常规             & 粗体                       & 斜体                      & 粗斜体                                \\ \hline
+        Times New Roman & Regular         & {\bfseries          Bold} & {\itshape         Italic} & {\bfseries \itshape      BoldItalic} \\ \hline
+        仿宋            & {\fangsong 常规} & {\fangsong \bfseries 粗体} & {\fangsong \itshape 斜体} & {\fangsong \bfseries \itshape 粗斜体} \\ \hline
+        宋体            & {\songti   常规} & {\songti   \bfseries 粗体} & {\songti   \itshape 斜体} & {\songti   \bfseries \itshape 粗斜体} \\ \hline
+        黑体            & {\heiti    常规} & {\heiti    \bfseries 粗体} & {\heiti    \itshape 斜体} & {\heiti    \bfseries \itshape 粗斜体} \\ \hline
+        楷体            & {\kaishu   常规} & {\kaishu   \bfseries 粗体} & {\kaishu   \itshape 斜体} & {\kaishu   \bfseries \itshape 粗斜体} \\ \hline
+    \end{tabular}
+\end{table}
 
-\chapter{再一章}
+\section{另一个 Section}
 
-\par 如\autoref{alg:sample}，这是一个算法
+\zhlipsum[2-3][name=zhufu]
 
-\begin{algorithm}[H]
-    \begin{algorithmic} % enter the algorithmic environment
-        \REQUIRE $n \geq 0 \vee x \neq 0$
-        \ENSURE $y = x^n$
-        \STATE $y \Leftarrow 1$
-        \IF{$n < 0$}
-            \STATE $X \Leftarrow 1 / x$
-            \STATE $N \Leftarrow -n$
-        \ELSE
-            \STATE $X \Leftarrow x$
-            \STATE $N \Leftarrow n$
-        \ENDIF
-        \WHILE{$N \neq 0$}
-            \IF{$N$ is even}
-                \STATE $X \Leftarrow X \times X$
-                \STATE $N \Leftarrow N / 2$
-            \ELSE[$N$ is odd]
-                \STATE $y \Leftarrow y \times X$
-                \STATE $N \Leftarrow N - 1$
-            \ENDIF
-        \ENDWHILE
-    \end{algorithmic}
-    \caption{\label{alg:sample}算法样例}
-\end{algorithm}
+\subsection{一个 Subsection}
+
+\zhlipsum[4-5][name=zhufu]
+
+\subsubsection{一个 Subsubsection}
+
+\zhlipsum[6-7][name=zhufu]
+
+\section{又一个 Section}
+
+\lipsum
+
+\chapter{另一个 Chapter}
+
+\section{又一个 Section}
+
+\zhlipsum[8][name=zhufu]
