--- a/body/undergraduate/final/2-body.tex
+++ b/body/undergraduate/final/2-body.tex
@@ -180,3 +180,32 @@ FCM项如下：
 
 \newpage
 \section{地震走时和电阻率联合反演}
+
+目前联合不同种类的物性数据的方法主要有结构耦合和物性耦合两种途径。结构耦合的方法由于约束不强，结果可能会与地下介质的真实结构相差甚远；而物性耦合虽然有较强的约束，但是良好的物性耦合先验信息需要大量物性数据与岩石物理实验，在大部分地区是难以实现的。浅部地表的物性参数多以类簇状为主，且部分介质的物性分布杂乱，这无疑为物性约束增加了难度。
+
+本章主要使用模糊C均值聚类耦合方法对地震信息和电法数据对实际的研究区域进行联合反演，目的是提高反演的精度。因为本次研究区有足够的物性数据，且一般来说，模糊C均值聚类耦合方法比先验信息缺失的情况下使用的互信息联合反演算法会有更好的结果。
+
+\subsection{研究区域概况与数据采集}
+
+良渚文化是中国新石器时代晚期的一种文化，距今约5300年至4000年前，主要分布在长江下游环太湖地区，共发现500多处遗址，以良渚遗址附近的莫角山为中心区。良渚文化的中心分布区为环太湖地区，即长江三角洲江南部分，以环太湖地区为中心区，南临杭州湾及钱塘江北岸，影响及于宁绍平原，东濒于海，向西止于镇江茅山和天目山山地，向北越过长江，极盛时抵达江苏淮北。遗址位置多在余杭良渚一带、上海福泉山一带、苏州东部地区及无锡南部。
+
+研究区位于良渚文化遗址的中心古城。中心古城的地层大致可以分为以下三类：第一层是浅地表的扰乱层，它的物性范围跨度较大，平均层厚为1.8m左右；第二层是人工堆积层，主要有耕地或是汉代砂土组成，平均厚度为8m；第三层是自然堆积层，该区域除部分杂填土层外，土壤层的物性分布都较为集中。我们结合这三层的物性交会图（如图\ref{fig:pro_intersection}），针对它们呈现出的聚类特征引入FCM聚类方法进行反演。
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{figure/thesis/output_revised.png}
+    \caption{良渚遗址--中心古城区钻孔物性交会图，中心古城区浅层可分为三大类：红色虚线—浅表杂土层、浅蓝色虚线—人工堆积层和绿色虚线—自然堆积层}
+    \label{fig:pro_intersection}
+\end{figure}
+
+\subsection{FCM聚类联合反演}
+
+在联合反演之前，我们需要确定目标函数的各项系数。如(\ref{fcmformula})所表示的，如果数据和先验信息完整，那么需要确定五组参数：地震数据和电法数据项的权重、震法和电法的正则化项权重和一组耦合系数。我以以下方法确定反演参数：
+
+\begin{itemize}
+    \item 利用单独反演的L曲线法确定每种反演方法的正则化项权重
+    \item 进行无耦合的联合反演。如果目标函数收敛，我们就可以选择两者下降速度基本一致的两组权重系数以作为数据项的权重。
+    \item 利用L曲线法，即在保证其他项获取的权重系数比例固定的情况下，计算耦合项和所有数据项的L曲线图。
+\end{itemize}
+
+通过上面的步骤，我们得到了联合反演目标函数的权重。我编不下去了。
