--- a/zjuthesis.cls
+++ b/zjuthesis.cls
@@ -49,17 +49,19 @@
 
 \ifthenelse{\equal{\TwoSide}{true}}
 {
-    \PassOptionsToClass{
+    \LoadClass[
+        zihao=-4,
+        UTF8,
         twoside,
         openright
-    }{ctexrep}
+    ]{ctexrep}
 }
-{}
-
-\LoadClass[
-    zihao=-4,
-    UTF8
-]{ctexrep}
+{
+    \LoadClass[
+        zihao=-4,
+        UTF8
+    ]{ctexrep}
+}
 
 \input{config/packages}
 
