--- a/zjuthesis.tex
+++ b/zjuthesis.tex
@@ -43,7 +43,7 @@
 
 %% Uncomment the following lines if you need multi line titles on cover pages
 \titletwolines{浅地表地质目标地球物理探测}{数据的聚类联合反演成像}
-% \titleengtwolines{English Title Line One}{English Title Line Two}
+% \titleengtwolines{English Title Line One}{Englisht Title Line Two}
 
 %% Uncomment the following lines if you need multi line department names on cover pages
 % \departmenttwolines{学院名第一行}{学院名第二行}
@@ -58,80 +58,62 @@
         \newrefsection
         
         \coverstyle
-        \inputpage{final}{cover}
+        \inputpage{final/cover}
 
         \prevstyle
-        \inputpage{final}{previous}
-        \inputpage{final}{toc}
+        \inputpage{final/previous}
+        \inputpage{final/toc}
 
         \bodystyle
-        \inputpage{final}{cover-part}
+        \cleardoublepage
+        \ifthenelse{\equal{\Type}{design}}
+            {\part{毕业设计}}
+            {\part{毕业论文}}
+        
         \inputbody{final/content}
         \inputbody{final/post}
 
         \poststyle
-        \inputpage{final}{post}
+        \inputpage{final/post}
 
         % Proposal part
         \renewcommand{\undergradcurrstage}{proposal}
         \newrefsection
 
         \coverstyle
-        \inputpage{proposal}{cover-part}
-        \inputpage{proposal}{cover}
-        \inputpage{proposal}{previous}
+        \cleardoublepage
+        \ifthenelse{\equal{\Type}{design}}
+            {\part{毕业设计开题报告}}
+            {\part{毕业论文开题报告}}
+
+        \inputpage{proposal/cover}
+        \inputpage{proposal/previous}
         
         \bodystyle
         \inputbody{proposal/content}
 
         \poststyle
-        \inputpage{proposal}{post}
+        \inputpage{proposal/post}
     }
-
-    \ifthenelse{\equal{\Period}{proposal}}
     {
         % Thesis proposal
         \newcommand{\undergradcurrstage}{proposal}
 
         \coverstyle
-        \inputpage{proposal}{cover}
+        \inputpage{proposal/cover}
     
         % 'proposal' previous part uses 'empty' page style,
         % as shown in cs undergrad template.
-        \inputpage{proposal}{previous}
+        \inputpage{proposal/previous}
         
         \prevstyle
-        \inputpage{proposal}{toc}
+        \inputpage{proposal/toc}
     
         \bodystyle
         \inputbody{proposal/content}
         
         \poststyle
-        \inputpage{proposal}{post}
-    }
-
-    \ifthenelse{\equal{\Period}{paper}}
-    {
-        % paper only part
-        \newcommand{\undergradcurrstage}{paper}
-        \newrefsection
-        
-        \coverstyle
-        \inputpage{final}{cover}
-
-        \prevstyle
-        \inputpage{final}{previous}
-        \inputpage{final}{toc}
-
-        \bodystyle
-        \inputpage{final}{cover-part}
-        \cleardoublepage
-        
-        \inputbody{final/content}
-        \inputbody{final/post}
-
-        \poststyle
-        \inputpage{final}{post}
+        \inputpage{proposal/post}
     }
 }
 
