--- a/body/undergraduate/final/2-body.tex
+++ b/body/undergraduate/final/2-body.tex
@@ -180,3 +180,12 @@ FCM项如下：
 
 \newpage
 \section{地震走时和电阻率联合反演}
+
+目前联合不同种类的物性数据的方法主要有结构耦合和物性耦合两种途径。结构耦合的方法由于约束不强，结果可能会与地下介质的真实结构相差甚远；而物性耦合虽然有较强的约束，但是良好的物性耦合先验信息需要大量物性数据与岩石物理实验，在大部分地区是难以实现的。浅部地表的物性参数多以类簇状为主，且部分介质的物性分布杂乱，这无疑为物性约束增加了难度。
+
+本章主要使用模糊C均值聚类耦合方法对地震信息和电法数据对实际的研究区域进行联合反演，目的是提高反演的精度。因为本次研究区有足够的物性数据，且一般来说，模糊C均值聚类耦合方法比先验信息缺失的情况下使用的互信息联合反演算法会有更好的结果。
+
+\subsection{研究区域概况与数据采集}
+
+良渚文化是中国新石器时代晚期的一种文化，距今约5300年至4000年前，主要分布在长江下游环太湖地区，共发现500多处遗址，以良渚遗址附近的莫角山为中心区。良渚文化的中心分布区为环太湖地区，即长江三角洲江南部分，以环太湖地区为中心区，南临杭州湾及钱塘江北岸，影响及于宁绍平原，东濒于海，向西止于镇江茅山和天目山山地，向北越过长江，极盛时抵达江苏淮北。遗址位置多在余杭良渚一带、上海福泉山一带、苏州东部地区及无锡南部。\cite{杨博2021基于聚类和多元地质统计学的电}
+
