Change to overleaf branch

--- a/body/undergraduate/final/1-introduction.tex
+++ b/body/undergraduate/final/1-introduction.tex
@@ -6,10 +6,9 @@
 
 我们了解地下介质的结构和组成的主要方式就是通过地球物理反演观测。通过钻孔数据我们可以观测到约5km深处的地下介质，将这部分数据与来自模型假设计算出的数值模拟输出的数据比较，我们就能得到描述区域地下结构的信息。模型假设通常是通过正演建模反复饰演生成的一组模型，它往往是对地质结构抽象的描述，并且对后续反演模型起到重要作用。近年来，由于计算能力的快速发展，大多数的地球物理模型已不再需要大量实验，而是通过反演程序构建。此类“可接受”的模型——标准通常是最终模型预测的数据符合最小二乘意义上的观测结果——存在着大量的算法去寻找一个或一组满足此类标准的结果（如Nocedal, 2006）。
 
-尽管对与模型或是反演算法有着深入的研究，且目前它们的精度仍在不断提高，但是地球物理反演总是不稳定的和非唯一的。不稳定性性指的是相似的数据会导致差异极大的模型（如Backus and Gilbert, 1967），非唯一性指的是无限数量的模型可以解释数据相同程度的非唯一性（如Munooz and Rath, 2006），这是因为我们测量的尺度远小于地球本身或是地质变化的尺度。除此之外，我们的测量不可避免地会受到噪声的污染，这会导致我们在解释数据时需要考虑噪声带来的歧义。但是这种由于地球物理反演方法本身带来的歧义是与使用的观测手段紧密联系的，如大地电磁方法对电阻层的厚度敏感而对电阻率本身不敏感，而直流电法对电阻（电阻率与厚度的乘积）敏感。如果能够合理利用这种互补性，我们也许可以对地球内部进行更精密的观测。
+尽管对与模型或是反演算法有着深入的研究，且目前它们的精度仍在不断提高，但是地球物理反演总是不稳定的和非唯一的。不稳定性性指的是相似的数据会导致差异极大的模型（如Backus and Gilbert, 1967），非唯一性指的是无限数量的模型可以解释数据相同程度的非唯一性（如Munooz and Rath, 2006），这是因为我们测量的尺度远小于地球本身或是地质变化的尺度。除此之外，我们的测量不可避免地会受到噪声的污染，这会导致我们在解释数据时需要考虑噪声带来的歧义。但是这种由于地球物理反演方法本身带来的歧义是与使用的观测手段紧密联系的，如大地电磁方法对电阻层的厚度敏感而对电阻率本身不敏感，而直流电法对电阻（电阻率与厚度的乘积）敏感。如果能够合理利用这种互补性，我们也许可以对地球内部进行更精密的观测。\cite{杨博2021基于聚类和多元地质统计学的电}
 
 \subsection{国内外的研究现状}
 
 
 \subsection{章节安排和创新点}
-
